--- a/index.html
+++ b/index.html
@@ -1,1 +1,123 @@
-a
+<!-- index.html -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Custom Crossword Generator</title>
+    <!-- Link to the CSS file -->
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <div class="main-container">
+        <!-- Header -->
+        <header>
+            <h1>Custom Crossword Generator</h1>
+        </header>
+
+        <!-- Settings Section -->
+        <section class="settings-section">
+            <h2>Settings</h2>
+            <div class="settings-controls">
+                <label for="rows-input">Rows:</label>
+                <input type="number" id="rows-input" name="rows-input" min="5" max="20" value="10">
+                
+                <label for="columns-input">Columns:</label>
+                <input type="number" id="columns-input" name="columns-input" min="5" max="20" value="10">
+                
+                <button id="generate-grid-button" class="btn primary-btn">Generate Grid</button>
+            </div>
+        </section>
+
+        <!-- Predefined Puzzles Section -->
+        <section class="predefined-puzzles-section">
+            <h2>Predefined Puzzles</h2>
+            <div class="predefined-puzzles-controls">
+                <button id="load-easy-button" class="btn secondary-btn">Load Easy Puzzle</button>
+                <button id="load-medium-button" class="btn secondary-btn">Load Medium Puzzle</button>
+                <button id="load-hard-button" class="btn secondary-btn">Load Hard Puzzle</button>
+            </div>
+        </section>
+
+        <!-- Mode Controls Section -->
+        <section class="mode-controls-section">
+            <h2>Mode Controls</h2>
+            <div class="mode-controls">
+                <button id="number-entry-button" class="btn mode-btn">Number Entry Mode</button>
+                <button id="letter-entry-button" class="btn mode-btn">Letter Entry Mode</button>
+                <button id="drag-mode-button" class="btn mode-btn">Drag Mode</button>
+            </div>
+            <div id="mode-label" class="mode-label">Mode: Default</div>
+        </section>
+
+        <!-- Accessibility Controls Section -->
+        <section class="accessibility-controls-section">
+            <h2>Accessibility</h2>
+            <div class="accessibility-controls">
+                <button id="high-contrast-button" class="btn accessibility-btn">Enable High Contrast</button>
+                <button id="increase-font-button" class="btn accessibility-btn">A+</button>
+                <button id="decrease-font-button" class="btn accessibility-btn">A-</button>
+            </div>
+        </section>
+
+        <!-- Undo/Redo Controls Section -->
+        <section class="undo-redo-controls-section">
+            <h2>Undo/Redo</h2>
+            <div class="undo-redo-controls">
+                <button id="undo-button" class="btn undo-redo-btn" disabled>Undo</button>
+                <button id="redo-button" class="btn undo-redo-btn" disabled>Redo</button>
+            </div>
+        </section>
+
+        <!-- Export/Import Controls Section -->
+        <section class="export-import-controls-section">
+            <h2>Export/Import</h2>
+            <div class="export-import-controls">
+                <button id="export-button" class="btn export-import-btn">Export Grid</button>
+                <button id="import-button" class="btn export-import-btn">Import Grid</button>
+                <input type="file" id="import-file-input" accept=".json" style="display: none;">
+            </div>
+        </section>
+
+        <!-- Middle Content Section -->
+        <section class="middle-content-section">
+            <!-- Status Display -->
+            <div class="status-display-container">
+                <h3>Status</h3>
+                <textarea id="status-display" readonly></textarea>
+            </div>
+
+            <!-- Grid Container -->
+            <div class="grid-container" id="grid-container">
+                <!-- Crossword grid will be dynamically generated here -->
+            </div>
+
+            <!-- Word Lists -->
+            <div class="word-lists-container">
+                <div class="word-list">
+                    <h3>Across</h3>
+                    <textarea id="across-display" readonly></textarea>
+                </div>
+                <div class="word-list">
+                    <h3>Down</h3>
+                    <textarea id="down-display" readonly></textarea>
+                </div>
+            </div>
+        </section>
+
+        <!-- Controls Section -->
+        <section class="controls-section">
+            <button id="solve-crossword-button" class="btn solve-btn">Solve Crossword</button>
+        </section>
+
+        <!-- Footer -->
+        <footer>
+            <p>© William Poston Crossword Generator</p>
+        </footer>
+    </div>
+
+    <!-- Link to the JavaScript modules -->
+    <script type="module" src="js/main.js"></script>
+</body>
+</html>
